name:                test-exchange
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/test-exchange#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WebApp
                     , Model
                     , Queries
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-types
                     , postgresql-simple
                     , postgresql-simple-url
                     , scotty
                     , text
                     , scientific
                     , wai
  default-language:    Haskell2010

executable test-exchange-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test-exchange
                     , postgresql-simple
                     , postgresql-simple-url
  default-language:    Haskell2010

executable test-exchange-initdb
  hs-source-dirs:     initdb
  main-is:            Main.hs
  ghc-options:        -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , test-exchange
                    , postgresql-simple
                    , postgresql-simple-url
  default-language:   Haskell2010

test-suite test-exchange-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , test-exchange
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/test-exchange
